# HTTP-Server

./: README.md
Code/: .gitattributes  Cargo.toml
Code/data/: data-sort-100mb.txt  data-sort-100mb.txt.sorted  data-sort-50mb.txt  data-sort-50mb.txt.sorted  large.txt  test.txt  testVideo.txt
Code/data/jobs/0000019a3c25c84e-00000000/: meta.txt
Code/src/: lib.rs  main.rs
Code/src/algorithms/: mandelbrot.rs  matrix_ops.rs  mod.rs  pi_calculation.rs  prime.rs
Code/src/config/: lib.rs  mod.rs  settings.rs
Code/src/data/jobs/0000019a37cbcac9-00000000/: meta.txt
Code/src/data/jobs/0000019a383b648f-00000000/: meta.txt
Code/src/data/jobs/0000019a383b648f-00000001/: meta.txt
Code/src/data/jobs/0000019a383b648f-00000002/: meta.txt
Code/src/data/jobs/0000019a383b648f-00000003/: meta.txt
Code/src/data/jobs/0000019a383b648f-00000004/: meta.txt
Code/src/data/jobs/0000019a383b648f-00000005/: meta.txt
Code/src/error/: mod.rs  types.rs
Code/src/handlers/: basics.rs  cpu_intensive.rs  handler_traits.rs  io_intensive.rs  job_endpoints.rs  metrics.rs  mod.rs
Code/src/io_operations/: compression.rs  file_ops.rs  file_processing.rs  hashing.rs  mod.rs
Code/src/jobs/: job_manager.rs  job_queue.rs  job_storage.rs  job_types.rs  mod.rs  mods.rs
Code/src/server/: connection.rs  http_server.rs  mod.rs  requests.rs  response.rs  router.rs
Code/src/utils/: crypto.rs  json.rs  logging.rs  metrics.rs  mod.rs  validation.rs
Code/src/workers/: mod.rs  task_queue.rs  worker_manager.rs  worker_pool.rs  worker_types.rs
Code/tests/: integration_tests.rs
(+128 files in other folders)
