[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
xz2 = "0.1"

[dev-dependencies]

[lib]
name = "http_server"
path = "src/lib.rs"

[[bin]]
name = "http-server"
path = "src/main.rs"
